--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,110 @@
-.first{
+html{
+    scroll-behavior: smooth;
+}
+
+.main{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0.2)), url('../img/bg.jpg');
+    background-size: cover;
+}
+
+.tableRow:nth-child(1){
     background-color: gold;
 }
 
-.second{
+.tableRow:nth-child(2){
     background-color: silver;
 }
 
-.third{
+.tableRow:nth-child(3){
     background-color: #723e02;
     color: white !important;
+}
+
+.svg{
+    height: 1.5rem;
+    width: 1.5rem;
+    transition: all .3s;
+    transform: scale(1) rotate(0deg);
+}
+
+.svg:hover{
+    transform: scale(1.02) rotate(-10deg);
+}
+
+.row{
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    justify-content: center;
+}
+
+.tableRow{
+    padding: 3rem;
+    transition: all .3s;
+}
+.tableRow:hover{
+    transform: scale(1.015);
+}
+
+
+.center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.li{
+    border: none;
+}
+
+.card{
+    width: 27rem;
+    justify-self: center;
+    box-shadow: 0 .2rem .2rem .2rem rgba(0, 0, 0, 0.17);
+    transition: all .3s;
+    opacity: 0;
+    animation: swell .5s linear forwards;
+}
+
+.card:hover{
+    position: relative;
+    filter: brightness(110%);
+    box-shadow: 0 .4rem .4rem .3rem rgba(0, 0, 0, 0.1);
+}
+
+@keyframes swell {
+    from{
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    to{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.figure{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 6rem;
+}
+
+.figure img{    
+    width: 100%;
+    transform: rotate(-10deg);
+}
+
+.img{
+    width: 100%;
+    height: 17rem;
+}
+
+.social{
+    height: 2rem;
 }
